kubernetes/ecr-api.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ecr-api-ingress
  namespace: sage
  annotations:

    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/proxy-body-size: "0" # required for docker registry
spec:
  rules:
  - host: ecr.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: ecr-api
          servicePort: 5000

  #- host: ecr-registry
  #  http:
  #    paths:
  #    - path: /
  #      backend:
  #        serviceName: ecr-registry
  #        servicePort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: ecr-api
  namespace: sage
  labels:
    app: ecr-api
spec:
  selector:
    k8s-app: ecr-api
  type: ClusterIP
  ports:
  - name: ecr-api
    port: 5000
    protocol: TCP
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: ecr-api
  namespace: sage
  labels:
    app: ecr-api
spec:
  selector:
    k8s-app: ecr-api
  type: ClusterIP
  ports:
  - name: ecr-api
    port: 5000
    protocol: TCP
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: ecr-api
  name: ecr-api
  namespace: sage
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: ecr-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: ecr-api
    spec:
      containers:
      - image: sagecontinuum/sage-ecr:latest
        name: ecr-api

        ports:
          - name: api
            containerPort: 5000

      restartPolicy: Always
