kubernetes/ecr-jenkins.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ecr-jenkins-ingress
  namespace: sage
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
  - http:
      paths:
      - path: /ecr/jenkins/
        backend:
          serviceName: ecr-jenkins
          servicePort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: ecr-jenkins
  namespace: sage
  labels:
    app: ecr-jenkins
spec:
  selector:
    k8s-app: ecr-jenkins
  type: ClusterIP
  ports:
  - name: ecr-jenkins
    port: 8080
    protocol: TCP
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: ecr-jenkins
  name: ecr-jenkins
  namespace: sage
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: ecr-jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: ecr-jenkins
    spec:
      containers:
      - image: sagecontinuum/ecr-jenkins:latest
        name: ecr-jenkins
        #resources:
        #  limits:
        #    cpu: 4
        #    memory: 4Gi
        #  requests:
        #    memory: 2Gi
        #    cpu: 2
        volumeMounts:
        - mountPath: /var/jenkins_home/
          name: ecr-jenkins
        #- name: dockerbinary
        #  mountPath: "/usr/local/bin/docker"
        - name: dockersock
          mountPath: "/var/run/docker.sock"
        - mountPath: /config
          name: ecr-jenkins-casc-secret
          readOnly: true
        ports:
          - name: ui
            containerPort: 8080
          - name: jnlp
            containerPort: 50000
      restartPolicy: Always
      volumes:
      - name: ecr-jenkins
        persistentVolumeClaim:
          claimName: ecr-jenkins-pvc
      #- name: dockerbinary
      #  hostPath:
      #    path: /services/docker/rootfs/usr/local/bin/docker
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
      - name: ecr-jenkins-casc-secret
        secret:
          secretName: ecr-jenkins-casc-secret
