kubernetes/ecr-registry.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ecr-registry-ingress
  namespace: sage
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0" # required for docker registry
spec:
  rules:

    - host: ecr-registry
        http:
        paths:
        - path: /
            backend:
            serviceName: ecr-registry
            servicePort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: ecr-registry
  namespace: sage
  labels:
    app: ecr-registry
spec:
  selector:
    k8s-app: ecr-registry
  type: ClusterIP
  ports:
  - name: ecr-registry
    port: 80
    protocol: TCP
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: ecr-registry
  name: ecr-registry
  namespace: sage
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: ecr-registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: ecr-registry
    spec:
      containers:
      - image: registry:2
        name: ecr-registry

        ports:
          - name: api
            containerPort: 5000

      restartPolicy: Always
